# multi-ai-refinement-framework

./: .cursorrules  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MODULE_DIAGRAM.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  SETUP_COMPLETE.md  env.example  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
examples/: basic_usage.py
src/ai_refinement_framework/: __init__.py  core.py  cost.py  exceptions.py  framework.py  pipeline.py  providers.py  py.typed
tests/: __init__.py  test_framework.py
